--- a/hobbies.html
+++ b/hobbies.html
@@ -11,7 +11,7 @@
       <li>Design and Video-editing</li>
       <li>Basketball & Fitness</li>
       <li>English learning</li>
-      <li>Animes</li>
+      <li>Movies & Animes</li>
     </ol>
     <a href="index.html">Back</a>
   </body>
